<resources>
    <string name="app_name">Dining Hall CAPEs</string>

    // Parse back4app
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Nhp0TqCxqruI5QThx4VaaWbhKQ15tmYOHqdMwqMV</string>
    <string name="back4app_client_key">uFaXhd3dYnUH6FZZkDzkKHzsYu1bVwJSZ0F8invn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="phone_number">Phone Number</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="enter_review_here">Enter review here</string>
    <string name="post_review">Post review</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user">User</string>
    <string name="review_body">Review Body</string>
    <string name="review_image">Review image</string>
    <string name="default_date">Jan 1, 2020</string>
</resources>