<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activities.DetailActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ivReviewImage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile_picture"
        tools:srcCompat="@drawable/instagram_user_filled_24" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvUsername"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tvUsername"
        android:text="@string/default_date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_alignStart="@+id/tvUsername"
        android:layout_marginTop="5dp"
        android:text="@string/review_body"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/ivReviewImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/review_image"
        tools:srcCompat="@drawable/instagram_user_filled_24" />
</RelativeLayout>